# UBC-cell

./: .gitignore  .gitmodules  README.md  experiment_0.py  experiment_1 copy.py  experiment_1.py  metrics.py  run.sh
experiment_results/run_0_seed_42/pacmap_generated_pairs/: Pair_MNs_seed_42.npy  Pair_neighbors_seed_42.npy
logs/: error_9629260.err  error_9629261.err  error_9629277.err  error_9629278.err  output_9629261.out  output_9629277.out  output_9629278.out
proto-rset/: .gitignore  .gitlab-ci.yml  README.md  examine_cell_model.ipynb  launch_UI.sh  pyproject.toml  run_all_globals.py  run_all_globals.sh  test_linear_rset.py  test_linear_rset.sh  test_sampling_rset.py  test_sampling_rset.sh  train.sh
proto-rset/.ipynb_checkpoints/: test_viz_on_the_fly-checkpoint.ipynb
proto-rset/docs/: README.md  index.html  website-utils.js
proto-rset/protopnet/: backbones.py  embedding.py  losses.py  train_vanilla_cosine.py
proto-rset/protopnet/datasets/: ubc_cells.py
proto-rset/protopnet/train/: trainer.py
proto-rset/training/: sbatch_sweep.py
proto-rset/training/sweeps/acc_only/: input_space_cells.yaml
