[project]
name = "protopnet"
description = "Baseline code for the core functionality of ProtoPNet by the Interpretable Machine Learning Lab at Duke University (https://users.cs.duke.edu/~cynthia/lab.html)"
version = "0.2.1"
authors = [
    { } #FIXME
]
requires-python = ">=3.8"
license = {} #TODO
dynamic = ["dependencies", "optional-dependencies"]

dependencies = {file=["requirements.txt"]}
optional-dependencies = {file=["requirements-dev.txt", "requirements-lint.txt"]}

[build-system]
requires = ["setuptools", "wheel"] 

[tool.setuptools]
packages = ["protopnet"]
package-dir = "."

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts="--strict-markers --ignore=test/out --cov-report term --cov=protopnet"
testpaths = ["test"]
markers = [
    "cpu: test should only run on platform without gpu",
    "cuda: test should only run on platform with cuda support",
    "mps: test should only run on platform with mps support",
    "e2e: a test of the entire model",
    "migration: a test that only makes sense during the refactoring into protopnext"
]

[tool.isort]
profile = "black"